# axelar-cgp-substrate

./: .gitignore  Cargo.toml  README.md  license-header  license-template-gplv3.txt
.github/workflows/: build.yml  lints.yaml
client/: Cargo.toml
client/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: lib.rs  mock.rs  proof.rs  tests.rs  traits.rs  utils.rs  weights.rs
integration-test/: Cargo.toml
integration-test/sample-receiver/: Cargo.toml
integration-test/sample-receiver/src/: lib.rs  traits.rs  weights.rs
integration-test/sample-runtime/: Cargo.toml
integration-test/sample-runtime/src/: lib.rs
integration-test/src/: env.rs  lib.rs
libs/ecdsa/: Cargo.toml
libs/ecdsa/src/: lib.rs
libs/proof/: Cargo.toml
libs/proof/src/: lib.rs
relayer/: Cargo.toml
sample-receiver/: Cargo.toml
sample-receiver/src/: lib.rs  traits.rs
sample-runtime/: Cargo.toml
sample-runtime/src/: lib.rs
src/: lib.rs  traits.rs
