[package]
name = "axelar-cgp-substrate"
description = "Axelar Cross-Chain Gateway Protocol - Substrate implementation"
repository = "https://github.com/centrifuge/axelar-cgp-substrate"
license = "GPL-3.0-only"
version = "0.0.1-dev"
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"

#[package.metadata.wasm-pack.profile.release]
## `wasm-opt` has some problems on linux, see
## https://github.com/rustwasm/wasm-pack/issues/781 etc.
#wasm-opt = false

[[bin]]
name = "axelar-cgp"
path = "gateway/src/lib.rs"

[workspace]
members = ["gateway"]
