[package]
name = "integration-test"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
proc-macro2 = "1.0.40"

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.33" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.33" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.33" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }

xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", rev = "c62dbf8e247c03d9797dbf3f1886f74973f2b22a" }
sample-runtime = { path = "../sample-runtime" }