[package]
name = "sample-runtime"
description = "Example of a host runtime for axelar implementation"
license = "GPL-3.0-only"
version = "0.1.0"
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
smallvec = "1.6.1"

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }

cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v0.9.33" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v0.9.33" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v0.9.33" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v0.9.33" }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v0.9.33" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v0.9.33" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
polkadot-runtime-constants = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }

axelar-cgp = { path = "../gateway" }
sample-receiver = { path = "../sample-receiver" }

[features]
default = ["std"]
no_std = []
std = [
    "serde/std",
    "codec/std",
    "scale-info/std",
    "axelar-cgp/std",

    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-balances/std",
    "frame-support/std",
    "frame-system/std",

    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-parachain-system/std",
    "parachain-info/std",
    "cumulus-primitives-utility/std",

    "xcm/std",
    "xcm-executor/std",
    "polkadot-parachain/std",
    "xcm-builder/std",
    "pallet-xcm/std",
    "polkadot-runtime-parachains/std",
]