[package]
name = "ecdsa"
description = "ECDSA functions"
repository = "https://github.com/centrifuge/axelar-cgp-substrate"
license = "GPL-3.0-only"
version = "0.0.1-dev"
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-encode-packed = "0.1.0"
libsecp256k1 = "0.7"
rand = "0.8.5"

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
