[package]
name = "axelar-cgp-proof"
description = "Axelar Cross-Chain Gateway Protocol - Proof lib"
repository = "https://github.com/centrifuge/axelar-cgp-substrate"
license = "GPL-3.0-only"
version = "0.0.1-dev"
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
